tests/functional/lang/eval-fail-toString-not-function.err.exp
error:
       … while calling the `__toString` attribute
         at /pwd/lang/eval-fail-toString-not-function.nix:1:6:
            1| "${{ __toString = "not a function"; }}"
             |      ^
            2|

       error: attempt to call something which is not a function but a string: "not a function"
       at /pwd/lang/eval-fail-toString-not-function.nix:1:6:
            1| "${{ __toString = "not a function"; }}"
             |      ^
            2|
